deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: ns
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: busybox-app
        image: busybox
        command: ["sh", "-c", "sleep 3600"]
        volumeMounts:
          - name: config-volume
            mountPath: /etc/config
          - name: efs-storage
            mountPath: /mnt/data
      volumes:
        - name: config-volume
          configMap:
            name: config-app
        - name: efs-storage
          persistentVolumeClaim:
            claimName: efs-pvc
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: DoNotSchedule
          labelSelector:
            matchLabels:
              app: app
