ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  namespace: ns
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - example.com
      secretName: secret-tls
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-service
                port:
                  number: 80
